Make edits necessary for soullink nuzlockes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta property="og:description" name="description" content="A tool for tracking Pokémon encounters and captures during Nuzloke challenges">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<meta property="og:title" content="Nuzlocke Tracker">
+		<meta property="og:title" content="SoulLink Nuzlocke Tracker">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://ashenfactory.github.io/nuzlocke-tracker/">
+		<meta property="og:url" content="https://soopercool101.github.io/nuzlocke-tracker/">
 		<meta property="og:locale" content="en_US">
 
-		<link rel="apple-touch-icon" sizes="180x180" href="https://ashenfactory.github.io/nuzlocke-tracker/apple-touch-icon.png?d=2020-12-01">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://ashenfactory.github.io/nuzlocke-tracker/favicon-32x32.png?d=2020-12-01">
-		<link rel="icon" type="image/png" sizes="16x16" href="https://ashenfactory.github.io/nuzlocke-tracker/favicon-16x16.png?d=2020-12-01">
-		<link rel="shortcut icon" type="image/x-icon" href="https://ashenfactory.github.io/nuzlocke-tracker/favicon.ico?d=2020-12-01" />
-		<link rel="manifest" href="https://ashenfactory.github.io/nuzlocke-tracker/site.webmanifest?d=2020-12-01">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://soopercool101.github.io/nuzlocke-tracker/apple-touch-icon.png?d=2020-12-01">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://soopercool101.github.io/nuzlocke-tracker/favicon-32x32.png?d=2020-12-01">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://soopercool101.github.io/nuzlocke-tracker/favicon-16x16.png?d=2020-12-01">
+		<link rel="shortcut icon" type="image/x-icon" href="https://soopercool101.github.io/nuzlocke-tracker/favicon.ico?d=2020-12-01" />
+		<link rel="manifest" href="https://soopercool101.github.io/nuzlocke-tracker/site.webmanifest?d=2020-12-01">
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css" integrity="sha256-2+dssJtgusl/DZZZ8gF9ayAgRzcewXQsaP86E4Ul+ss=" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main.min.css?2020-12-02">
@@ -67,7 +67,7 @@
 			<div class="ui inverted vertical footer segment">
 				<div class="ui center aligned container">
 					<p>Pokémon © 2002-<span class="copyright-year">2020</span> Pokémon. © 1995-<span class="copyright-year">2020</span> Nintendo/Creatures Inc./GAME FREAK inc. TM, ® and Pokémon character names are trademarks of Nintendo.</p>
-					<a target="_blank" href="https://github.com/Ashenfactory/nuzlocke-tracker" title="View on GitHub" class="circular ui icon button"><i class="large github icon"></i></a>
+					<a target="_blank" href="https://github.com/soopercool101/nuzlocke-tracker" title="View on GitHub" class="circular ui icon button"><i class="large github icon"></i></a>
 				</div>
 			</div>
 		</div>
